Added profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Christopher Kang
+logo: /assets/img/Kang_new_prof.jpg
+description: Chris Kang's Personal Website
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
