--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Christopher Kang
 logo: /assets/img/Kang_new_prof.jpg
-description: Synopsis of me.
+description: I'm Chris Kang, a Computer Science / Economics / Mathematics major at the University of Washington, Seattle.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
