Add analytics to site

--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ title: Christopher Kang
 logo: /assets/img/Kang_new_prof.jpg
 description: I'm Chris Kang, a Computer Science / Economics / Mathematics major at the University of Washington, Seattle.
 show_downloads: false
-google_analytics:
+google_analytics: UA-169623724-1
 theme: jekyll-theme-minimal
