try also enabling manual runs

--- a/.github/workflows/dynamic-daily-update.yml
+++ b/.github/workflows/dynamic-daily-update.yml
@@ -5,6 +5,8 @@ name: Update-static-files
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
+  workflow_dispatch:
+
   schedule:
     - cron: '0 0 * * 6'
 
