--- a/.github/workflows/dynamic-daily-update.yml
+++ b/.github/workflows/dynamic-daily-update.yml
@@ -30,7 +30,8 @@ jobs:
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git commit -m "Update books data file" -a
+        git add ./_data/books_with_covers.csv
+        git commit -m "Update books data file"
     
     - name: Push changes
       uses: ad-m/github-push-action@master
